--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-picker/picker": "^2.11.0",
     "expo": "~53.0.9",
+    "expo-font": "^13.3.1",
+    "expo-router": "^5.0.7",
+    "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
+    "formik": "^2.4.6",
+    "nativewind": "^2.0.11",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.2",
+    "react-native-calendars": "^1.1312.0",
+    "react-native-reanimated": "~3.17.4",
+    "tailwindcss": "^3.3.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
