--- a/app.json
+++ b/app.json
@@ -1,17 +1,20 @@
 {
   "expo": {
     "name": "Zentra",
-    "slug": "Zentra",
+    "slug": "zentra",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -24,6 +27,10 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "scheme": "zentra",
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
