--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-picker/picker": "^2.11.0",
     "expo": "~53.0.9",
@@ -17,6 +18,7 @@
     "expo-router": "^5.0.7",
     "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^11.8.1",
     "formik": "^2.4.6",
     "nativewind": "^2.0.11",
     "react": "19.0.0",
