--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-picker/picker": "^2.11.0",
     "expo": "~53.0.9",
+    "expo-blur": "~14.1.4",
     "expo-font": "^13.3.1",
     "expo-router": "^5.0.7",
     "expo-splash-screen": "^0.30.8",
@@ -25,6 +26,7 @@
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1312.0",
     "react-native-reanimated": "~3.17.4",
+    "react-native-wheely": "^0.6.0",
     "tailwindcss": "^3.3.2",
     "yup": "^1.6.1"
   },
