--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1312.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-reanimated": "~3.17.4",
+    "react-native-toast-message": "^2.3.0",
     "react-native-wheely": "^0.6.0",
     "tailwindcss": "^3.3.2",
     "yup": "^1.6.1"
