--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1312.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.26.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-toast-message": "^2.3.0",
