Update project configuration and enhance notification settings. Added platform-specific directories to .gitignore, updated app.json with bundle identifiers for iOS and Android, and introduced eas.json for build configurations. Modified profile screen to navigate to notification settings and improved notification scheduling function to accept dynamic time parameters.

--- a/app.json
+++ b/app.json
@@ -16,14 +16,16 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.ruhadam.zentra"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.ruhadam.zentra"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -31,6 +33,12 @@
     "scheme": "zentra",
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "69b02155-c8be-4f5c-9e3e-66af065d3955"
+      }
+    }
   }
 }
