.gitignore dosyasına Expo ve diğer bağımlılıklar için yeni dosya yolları eklendi. babel.config.js dosyasında dotenv yapılandırması güncellendi. eas.json dosyasında Android için gradle komutu eklendi. metro.config.js dosyasında CSS işleme ayarları yapıldı. package.json ve package-lock.json dosyalarında bağımlılık güncellemeleri yapıldı. AuthContext ve UserContext dosyalarında default export eklendi.

--- a/eas.json
+++ b/eas.json
@@ -15,10 +15,15 @@
       "autoIncrement": true
     },
     "local": {
-      "android": {
-        "buildType": "apk"
-      }
+  "android": {
+    "buildType": "apk",
+    "gradleCommand": ":app:assembleRelease",
+    "env": {
+      "ANDROID_HOME": "/home/ruhadam/Android/Sdk"
     }
+  }
+}
+
   },
   "submit": {
     "production": {}
