--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -16,6 +16,7 @@
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
     "expo-font": "^13.3.1",
+    "expo-notifications": "~0.31.3",
     "expo-router": "^5.0.7",
     "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -23,7 +24,7 @@
     "formik": "^2.4.6",
     "nativewind": "^2.0.11",
     "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.4",
     "react-native-calendars": "^1.1312.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.26.0",
@@ -33,7 +34,7 @@
     "react-native-wheely": "^0.6.0",
     "tailwindcss": "^3.3.2",
     "yup": "^1.6.1",
-    "expo-notifications": "~0.31.3"
+    "react-native-safe-area-context": "5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
